--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -217,11 +217,22 @@ website:
           </div>
     center:
       - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Get started</div>
+            <div class="footer-user-guides-columns">
+              <ul class="footer-user-guides-column-1">
+                <li><a href="/get-started/developer/quickstart-developer.qmd">Model development</a></li>
+                <li><a href="/get-started/validator/quickstart-validator.qmd">Model validation</a></li>
+                <li><a href="/get-started/administrator/quickstart-administrator.qmd">Setup & admin</a></li>
+              </ul>
+            </div>
+          </div>
+      - text: |
           <div class="footer-section footer-user-guides">
             <div class="footer-heading">Guides</div>
             <div class="footer-user-guides-columns">
               <ul class="footer-user-guides-column-1">
-                <li><a href="/get-started/get-started.qmd">Get started</a></li>
+                <li><a href="/guide/guides.qmd#access">Access</a></li>
                 <li><a href="/guide/guides.qmd#configuration">Configuration</a></li>
                 <li><a href="/guide/guides.qmd#model-inventory">Model inventory</a></li>
               </ul>
@@ -269,9 +280,9 @@ website:
           <div class="footer-section">
             <div class="footer-heading">Community</div>
             <ul>
-              <li><a href="/about/contributing/join-community.qmd" target="_blank">Slack</a></li>
-              <li><a href="https://github.com/validmind/documentation">Github</a></li>
-              <li><a href="https://validmind.com/blog/">Blog</a></li>
+              <li><a href="/about/contributing/join-community.qmd" target="_blank"><i class="fa-brands fa-slack"></i> Slack</a></li>
+              <li><a href="https://github.com/validmind/documentation"><i class="fa-brands fa-github"></i> GitHub</a></li>
+              <li><a href="https://validmind.com/blog/"><i class="fa-solid fa-circle-check"></i> Blog</a></li>
             </ul>
           </div>
     right: |
