Setup for Manage platform notifications

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -30,6 +30,7 @@ website:
           contents:
           - guide/configuration/manage-your-profile.qmd
           - guide/configuration/customize-your-dashboard.qmd
+        - guide/configuration/manage-platform-notifications.qmd
         - text: "---"
         - text: "Model Workflows"
         - text: "Setting up model workflows"
