Simplify release notes copying

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ release-scripts/__pycache__
 site/installation
 
 # Release notes source tracked in private repository
-site/releases/validmind-library
-site/releases/frontend
+site/releases/backend
+site/releases/cmvm
 site/releases/documentation
+site/releases/frontend
+site/releases/installation
+site/releases/validmind-library
