--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -51,11 +51,7 @@ jobs:
         run: cp -r site/_source/installation/site/installation site/installation
 
       - name: Populate release notes
-        run: |
-          cp -r site/_source/release-notes/releases/validmind-library site/releases/validmind-library
-          cp -r site/_source/release-notes/releases/frontend site/releases/frontend
-          cp -r site/_source/release-notes/releases/documentation site/releases/documentation
-          cp -r site/_source/release-notes/releases/cmvm site/installation/releases
+        run: cp -r site/_source/release-notes/releases site
 
       - name: Render prod docs site
         run: |
