File rename, change how we embed the REST API landing page

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -54,3 +54,5 @@ website:
         - text: "Reference"
         - text: "{{< var validmind.api >}}"
           file: validmind/validmind.qmd
+        - text: "{{< fa book >}} {{< var vm.product >}} REST APIs"
+          file: reference/validmind-rest-apis.qmd
