Add APIs in sidebar, disable breadcrumbs

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -56,3 +56,8 @@ website:
           file: validmind/validmind.qmd
         - text: "{{< fa book >}} {{< var vm.product >}} REST APIs"
           file: reference/validmind-rest-apis.qmd
+          contents:
+            - text: "{{< var vm.product >}} API"
+              file: reference/vm-api.qmd
+            - text: "{{< var vm.product >}} Admin API"
+              file: reference/admin-api.qmd
