Set up for Customize finding overview page

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -102,6 +102,7 @@ website:
             file: guide/model-validation/view-filter-model-findings.qmd
           - text: "Add and manage findings"
             file: guide/model-validation/add-manage-model-findings.qmd
+          - guide/model-validation/customize-finding-overview-page.qmd
         - text: "---"
         - text: "Reporting"
         - file: guide/reporting/working-with-analytics.qmd
