docs: Manage platform notifications MVP (#860)
* New access section

* Fixing broken links

* Fixing broken links pt2

* Massaging footer

* Moving access images

* Setup for Manage platform notifications

* Outline for Manage platform notifications

* WIP View platform notifications

* WIP

* WIP...

* Save point

* Placeholders

* Edit for MVP

* Tweak

* Org invite filter

* Edits

* Hiding accept invites for now

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -5,11 +5,13 @@ website:
       contents:
         - guide/guides.qmd
         - text: "---"
-        - text: "Configuration"
-        - file: guide/configuration/accessing-validmind.qmd
+        - text: "Access"
+        - file: guide/access/accessing-validmind.qmd
           contents:
-            - guide/configuration/register-with-validmind.qmd
-            - guide/configuration/log-in-to-validmind.qmd
+            - guide/access/register-with-validmind.qmd
+            - guide/access/log-in-to-validmind.qmd
+        - text: "---"
+        - text: "Configuration"
         - file: guide/configuration/managing-your-organization.qmd
           contents:
             - guide/configuration/set-up-your-organization.qmd
@@ -28,6 +30,7 @@ website:
           contents:
           - guide/configuration/manage-your-profile.qmd
           - guide/configuration/customize-your-dashboard.qmd
+        - guide/configuration/manage-platform-notifications.qmd
         - text: "---"
         - text: "Model Workflows"
         - text: "Setting up model workflows"
