Final tweaks before posting for review

--- a/site/reference/_sidebar.yaml
+++ b/site/reference/_sidebar.yaml
@@ -4,7 +4,7 @@ website:
         contents: 
           - text: "REST API Reference"
             file: reference/validmind-rest-apis.qmd
-          - text: "{{< var vm.product >}} API"
+          - text: "{{< var vm.product >}} Public API"
             file: reference/vm-api.qmd
           - text: "{{< var vm.product >}} Admin API"
             file: reference/admin-api.qmd
