PR preview for 25.08 release notes

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -29,6 +29,7 @@ jobs:
       with:
         repository: validmind/release-notes
         path: site/_source/release-notes
+        ref: nrichers/sc-11435/release-notes-for-25-08-on-7-31-25
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Set up Python 3.11
