Remove admin API from PR

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -54,10 +54,6 @@ website:
         - text: "Reference"
         - text: "{{< var validmind.api >}}"
           file: validmind/validmind.qmd
-        - text: "{{< fa book >}} {{< var vm.product >}} REST APIs"
-          file: reference/validmind-rest-apis.qmd
-          contents:
-            - text: "{{< var vm.product >}} Public API"
-              file: reference/vm-api.qmd
-            - text: "{{< var vm.product >}} Admin API"
-              file: reference/admin-api.qmd
+        - reference/validmind-rest-api-vm.qmd
+
+
