--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -54,3 +54,6 @@ website:
         - text: "Reference"
         - text: "{{< var validmind.api >}}"
           file: validmind/validmind.qmd
+        - reference/validmind-rest-api-vm.qmd
+
+
