Add updated site/_variables.yml to prod to address merge conflict

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -24,6 +24,7 @@ validmind:
   training: "ValidMind Academy"
   customer: "Customer-managed ValidMind"
   admin: "ValidMind Admin UI"
+  checker: "Document Checker"
 
 
 
@@ -36,6 +37,7 @@ vm:
   api: "Python API"
   customer: "CMVM"
   admin: "admin UI"
+  checker: "checker"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
@@ -45,8 +47,8 @@ vm:
 
 link:
   contact: "[**Contact Us**](https://validmind.com/contact/)"
-  login: "[You are logged in to ValidMind.](/guide/configuration/log-in-to-validmind.qmd)"
-  register: "[**Register with ValidMind {{< fa hand-point-right >}} **](/guide/configuration/register-with-validmind.qmd)"
+  login: "[You are logged in to ValidMind.](/guide/access/log-in-to-validmind.qmd)"
+  register: "[**Register with ValidMind {{< fa hand-point-right >}} **](/guide/access/register-with-validmind.qmd)"
 
 # Short form — URL only
 # Rendered format: `{{< var url.us1 >}}`
