--- a/site/Makefile
+++ b/site/Makefile
@@ -1,6 +1,7 @@
 # Define source and destination directories
 LIBRARY_BRANCH ?= $(or $(LIBRARY),main)
 INSTALLATION_BRANCH ?= $(or $(INSTALLATION),main)
+RELEASE_NOTES_BRANCH ?= $(or $(RELEASE_NOTES),main)
 SRC_ROOT := _source
 SRC_DIR := $(SRC_ROOT)/validmind-library
 DEST_DIR_NB := notebooks
@@ -13,7 +14,7 @@ SRC_ROOT := _source
 SRC_DIR := $(SRC_ROOT)/validmind-library
 
 # Define .PHONY target for help section
-.PHONY: help clean clone copy-installation copy-release-notes delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-source kind-serve kind-stop kind-restart kind-logs notebooks python-docs release-notes test-descriptions yearly-releases
+.PHONY: help clean clone copy-installation copy-release-notes delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-api-json get-source kind-serve kind-stop kind-restart kind-logs notebooks python-docs release-notes test-descriptions yearly-releases
 
 # Help section
 help:
@@ -21,7 +22,10 @@ help:
 	@echo "  help                     Display this help message (default target)"
 	@echo "  clean                    Remove the _source/ directory"
 	@echo "  clone                    Clone other required repositories into _source/"
-	@echo "                           Optional, for PR testing: LIBRARY=<branch-name> INSTALLATION=<branch-name>"
+	@echo "                           Optional, for PR testing:" 
+	@echo "                              LIBRARY=<branch-name>"
+	@echo "                              INSTALLATION=<branch-name>"
+	@echo "                              RELEASE_NOTES=<branch-name>"
 	@echo "  copy-installation        Copy customer-managed installation docs into installation/"
 	@echo "  copy-release-notes       Copy release notes into releases/ and installation/releases/"
 	@echo "  delete-demo-branch       Delete docs demo site in s3://docs-ci-cd-demo/site/pr_previews/$(GIT_BRANCH)/"
@@ -35,7 +39,8 @@ help:
 	@echo "  docs-site                Get all source files and render the production docs site with Quarto"
 	@echo "  generate-sitemap         Generate a sitemap for the static HTML site"
 	@echo "  execute                  Execute a Jupyter Notebook or notebook directory"
-	@echo "  get-source               Get all source files (clean, clone, copy-installation, copy-release-notes, notebooks, python-docs, test-descriptions)"
+	@echo "  get-api-json             Download Swagger JSON specs from ValidMind APIs into reference/"
+	@echo "  get-source               Get all source files (clean, clone, copy-installation, copy-release-notes, notebooks, python-docs, test-descriptions, get-api-json)"
 	@echo "  kind-serve               Set up Kind cluster for ValidMind docs"
 	@echo "  kind-stop                Stop Kind cluster for ValidMind docs"
 	@echo "  kind-restart             Restart Kind cluster for ValidMind docs"
@@ -53,7 +58,7 @@ clean:
 	@rm -rf $(SRC_DIR)
 	@rm -rf $(SRC_ROOT)
 	@rm -rf installation/*
-	@rm -rf releases/validmind-library releases/frontend releases/documentation releases/cmvm
+	@rm -rf releases/backend releases/cmvm releases/documentation releases/frontend releases/installation releases/validmind-library
 
 # Prompt for a branch or release tag and clone the repository
 clone:
@@ -77,8 +82,8 @@ clone:
 	@echo "\nCloning installation repo from $(INSTALLATION_BRANCH) ..."; \
 	git clone --depth 1 -b $(INSTALLATION_BRANCH) git@github.com:validmind/installation.git $(SRC_ROOT)/installation
 
-	@echo "\nCloning release-notes repo from main ..."; \
-	git clone --depth 1 -b main git@github.com:validmind/release-notes.git $(SRC_ROOT)/release-notes
+	@echo "\nCloning release-notes repo from $(RELEASE_NOTES_BRANCH) ..."; \
+	git clone --depth 1 -b $(RELEASE_NOTES_BRANCH) git@github.com:validmind/release-notes.git $(SRC_ROOT)/release-notes
 
 copy-installation:
 	@echo "\nCopying installation source files ..."
@@ -250,6 +255,17 @@ generate-sitemap:
 	printf '</body>\n</html>\n' >> _site/sitemap.html
 	@rm sitemap.urls.tmp
 	@echo "Sitemaps generated at _site/sitemap.xml and _site/sitemap.html"
+
+# Download Swagger JSON specs from ValidMind APIs
+get-api-json:
+	@rm -f reference/vm-api-swagger.json reference/admin-api-swagger.json reference/rapidoc-min.js
+	@mkdir -p reference
+	@echo "Fetching VM API Swagger spec ..."
+	@curl -s -o reference/vm-api-swagger.json "https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json" || echo "Failed to fetch VM API spec"
+	@echo "Fetching Admin API Swagger spec ..."
+	@curl -s -o reference/admin-api-swagger.json "https://api.dev.vm.validmind.ai/admin/api/v1/swagger.json" || echo "Failed to fetch Admin API spec"
+	@echo "Fetching RapiDoc JavaScript library ..."
+	@curl -s -o reference/rapidoc-min.js "https://unpkg.com/rapidoc/dist/rapidoc-min.js" || echo "Failed to fetch RapiDoc library"
 
 # Get all source files
 get-source: clean clone copy-installation copy-release-notes notebooks python-docs test-descriptions
