Check for WARNING in render log

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -105,7 +105,7 @@ jobs:
 
     - name: Test for warnings or errors
       run: |
-        if grep -q 'WARN:\|ERROR:' site/render_errors.log; then
+        if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
           echo "Warnings or errors detected during Quarto render"
           cat site/render_errors.log
           exit 1
