--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -29,6 +29,7 @@ jobs:
       with:
         repository: validmind/release-notes
         path: site/_source/release-notes
+        ref: release-notes-25-08-part-2
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Set up Python 3.11
