--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -19,10 +19,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out installation repository
+      - name: Check out documentation repository
         uses: actions/checkout@v2
 
-      - name: "Checkout documentation repository"
+      # Reclaim space + create a reserve for deterministic headroom
+      - name: Free space + create reserve
+        uses: ./.github/actions/free-disk-space
+        with:
+          remove_dotnet: "true"
+          remove_android: "true"
+          remove_haskell: "true"
+          prune_docker: "true"
+          apt_cleanup: "true"
+          create_reserve_gb: "3"
+
+      - name: Check out installation repository
         uses: actions/checkout@v4
         with:
           repository: validmind/installation
@@ -40,6 +51,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          check-latest: false
   
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
@@ -72,7 +84,6 @@ jobs:
           echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> dev.env
           echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> dev.env
           echo VM_API_MODEL=${{ secrets.PLATFORM_DEV_MODEL }} >> dev.env
-          cat dev.env
 
       # If yes then create the valid.env file for use in execution step
       - name: Create valid.env file
@@ -83,7 +94,6 @@ jobs:
           echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> valid.env
           echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> valid.env
           echo VM_API_MODEL=${{ secrets.PLATFORM_VALID_MODEL }} >> valid.env
-          cat valid.env
 
       # Only execute the staging notebooks for training if .env files are created
       - name: Execute staging ValidMind for model development and validation series
@@ -100,3 +110,21 @@ jobs:
 
       - name: Deploy docs staging site
         run: aws s3 sync site/_site s3://validmind-docs-staging/site --delete --exclude "installation/helm-repo/*" --exclude "pr_previews/*" && aws cloudfront create-invalidation --distribution-id ESWVTZYFL873V --paths "/*" --no-cli-pager
+
+      # Release headroom and shrink before final lightweight steps & post-job
+      - name: Release reserve & shrink
+        if: always()
+        uses: ./.github/actions/free-disk-space
+        with:
+          release_reserve: "true"
+          remove_paths: |
+            site/_source/installation
+            site/_source/release-notes
+            site/render_errors.log
+            site/_freeze
+            dev.env
+            valid.env
+
+      - name: Final disk usage
+        if: always()
+        run: df -hT /
