--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -14,8 +14,19 @@ jobs:
     if: github.event.pull_request.draft == false
 
     steps:
-    - name: Check out repository
+    - name: Check out documentation repository
       uses: actions/checkout@v2
+
+    # Reclaim space + create a reserve for deterministic headroom
+    - name: Free space + create reserve
+      uses: ./.github/actions/free-disk-space
+      with:
+        remove_dotnet: "true"
+        remove_android: "true"
+        remove_haskell: "true"
+        prune_docker: "true"
+        apt_cleanup: "true"
+        create_reserve_gb: "3"
 
     - name: Check out installation repository
       uses: actions/checkout@v4
@@ -35,6 +46,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
+        check-latest: false
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
@@ -90,7 +102,6 @@ jobs:
         echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> dev.env
         echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> dev.env
         echo VM_API_MODEL=${{ secrets.PLATFORM_DEV_MODEL }} >> dev.env
-        cat dev.env
 
     # If yes then create the valid.env file for use in execution step
     - name: Create valid.env file
@@ -102,7 +113,6 @@ jobs:
         echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> valid.env
         echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> valid.env
         echo VM_API_MODEL=${{ secrets.PLATFORM_VALID_MODEL }} >> valid.env
-        cat valid.env
 
     # Only execute the demo notebooks for training if .env files are created
     - name: Execute demo ValidMind for model development and validation series
@@ -152,3 +162,21 @@ jobs:
             issue_number: context.issue.number,
             body: comment
           });
+
+    # Release headroom and shrink before final lightweight steps & post-job
+    - name: Release reserve & shrink
+      if: always()
+      uses: ./.github/actions/free-disk-space
+      with:
+        release_reserve: "true"
+        remove_paths: |
+          site/_source/installation
+          site/_source/release-notes
+          site/render_errors.log
+          site/_freeze
+          dev.env
+          valid.env
+
+    - name: Final disk usage
+      if: always()
+      run: df -hT /
