--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -102,23 +102,7 @@ website:
         - text: "{{< fa building-columns >}} Training Courses"
           file: training/training.qmd
 
-      - text: "Log In"
-        menu:
-          - text: "Public Internet"
-          - text: "{{< var validmind.platform >}} · `US1` {{< fa right-to-bracket >}}"
-            href:  https://app.prod.validmind.ai/
-            target: _blank
-          - text: "{{< var validmind.platform >}} · `CA1` {{< fa right-to-bracket >}}"
-            href: https://app.ca1.validmind.ai
-            target: _blank
-          - text: "---"
-          - text: "Private Link"
-          - text: "{{< var validmind.vpv >}} (VPV)"
-            href: "guide/access/log-in-to-validmind.qmd#section"
-          - text: "---"
-          - text: "<small>Which login should I use?</small>"
-            href: "guide/access/log-in-to-validmind.qmd"
-        
+# The log in menu is defined in _quarto-development.yml, _quarto-staging.yml, and _quarto-production.yml as not all environments have the same login options.
 
 #  COMMENT THIS OUT WHEN DONE TESTING
       # - text: "{{< fa flask >}} Testing"
