Update product variable

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -22,7 +22,7 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
-  customer: "Customer-managed ValidMind"
+  customer: "Customer-Managed ValidMind"
   admin: "ValidMind Admin UI"
   checker: "Document Checker"
 
