Nrichers/sc 11817/address docs login to directing to validmind (#902)
* Proof that we can move the log in menu into a Quarto profile

* Fix CSS bug that breaks menu unless overridden with important

* Add login menu to other Quarto profiles

* Update product variable

* Update accessing ValidMind topic

* Text edits

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -35,52 +35,7 @@ website:
     background: white
     title: false
     pinned: true
-
     right:
-      # - text: "{{< fa cube >}} Documentation"
-      #   file: about/overview.qmd
-      # HOME BUTTON FOR DEVELOPER & TRAINING SECTIONS
-      # - text: "{{< fa house >}}"
-      #   file: index.qmd
-      # DOCUMENTATION MENU FOR DEVELOPER & TRAINING SECTIONS
-      - text: "{{< fa book-open >}} Documentation"
-        menu:
-        - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
-          file: about/overview.qmd
-        - text: "{{< fa rocket >}} Get Started"
-          file: get-started/get-started.qmd
-        - text: "{{< fa book >}} Guides"
-          file: guide/guides.qmd
-        - text: "{{< fa envelope-open-text >}} Support"
-          file: support/support.qmd
-        - text: "{{< fa bullhorn >}} Releases"
-          file: releases/all-releases.qmd
-        - text: "---"
-        - text:  "{{< fa cube >}} Python Library"
-        - text: "{{< fa code >}} {{< var validmind.developer >}}"
-          file: developer/validmind-library.qmd
-        - text: "---"
-        - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
-        - text: "{{< fa building-columns >}} Training Courses"
-          file: training/training.qmd
-        # - text: "---"
-        # - text: "{{< fa square-check >}} validmind.com {{< fa external-link >}}"
-        #   file: https://validmind.com/
-        #   target: _blank
-      # TRAINING MENU FOR ACADEMY SECTION
-      # - text: "{{< fa graduation-cap >}} Training"
-      #   menu:
-      #   - text: "{{< fa house >}} ValidMind Academy"
-      #     file: training/training.qmd
-      #   - text: "---"
-      #   - text:  "{{< fa building-columns >}} Fundamentals"
-      #   - text: "{{< fa gear >}} For Administrators"
-      #     file: training/administrator-fundamentals/administrator-fundamentals-register.qmd
-      #   - text: "{{< fa code >}} For Developers"
-      #     file: training/developer-fundamentals/developer-fundamentals-register.qmd
-      #   - text: "{{< fa user-check >}} For Validators"
-      #     file: training/validator-fundamentals/validator-fundamentals-register.qmd
-
       - text: "{{< fa book-open >}} Documentation"
         menu:
         - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
@@ -102,23 +57,7 @@ website:
         - text: "{{< fa building-columns >}} Training Courses"
           file: training/training.qmd
 
-      - text: "Log In"
-        menu:
-          - text: "Public Internet"
-          - text: "{{< var validmind.platform >}} · `US1` {{< fa right-to-bracket >}}"
-            href:  https://app.prod.validmind.ai/
-            target: _blank
-          - text: "{{< var validmind.platform >}} · `CA1` {{< fa right-to-bracket >}}"
-            href: https://app.ca1.validmind.ai
-            target: _blank
-          - text: "---"
-          - text: "Private Link"
-          - text: "{{< var validmind.vpv >}} (VPV)"
-            href: "guide/access/log-in-to-validmind.qmd#section"
-          - text: "---"
-          - text: "<small>Which login should I use?</small>"
-            href: "guide/access/log-in-to-validmind.qmd"
-        
+# The log in menu is defined in _quarto-development.yml, _quarto-staging.yml, and _quarto-production.yml as not all environments have the same login options.
 
 #  COMMENT THIS OUT WHEN DONE TESTING
       # - text: "{{< fa flask >}} Testing"
