--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -28,19 +28,19 @@ jobs:
         apt_cleanup: "true"
         create_reserve_gb: "3"
 
-    - name: Check out installation repository
-      uses: actions/checkout@v4
-      with:
-        repository: validmind/installation
-        path: site/_source/installation
-        token: ${{ secrets.INSTALLATION_RO_PAT }}
+    # - name: Check out installation repository
+    #   uses: actions/checkout@v4
+    #   with:
+    #     repository: validmind/installation
+    #     path: site/_source/installation
+    #     token: ${{ secrets.INSTALLATION_RO_PAT }}
 
-    - name: Check out release-notes repository
-      uses: actions/checkout@v4
-      with:
-        repository: validmind/release-notes
-        path: site/_source/release-notes
-        token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
+    # - name: Check out release-notes repository
+    #   uses: actions/checkout@v4
+    #   with:
+    #     repository: validmind/release-notes
+    #     path: site/_source/release-notes
+    #     token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v5
@@ -54,31 +54,31 @@ jobs:
     - name: Setup R environment
       uses: ./.github/actions/setup-r
 
-    - name: Populate installation
-      run: cp -r site/_source/installation/site/installation site/installation
+    # - name: Populate installation
+    #   run: cp -r site/_source/installation/site/installation site/installation
 
-    - name: Populate release notes
-      run: cp -r site/_source/release-notes/releases site
+    # - name: Populate release notes
+    #   run: cp -r site/_source/release-notes/releases site
 
-    - name: Render demo docs site
-      run: |
-          cd site
-          quarto render --profile development 2>&1 | tee render_errors.log || {
-          echo "Quarto render failed immediately";
-          cat render_errors.log;
-          exit 1;
-          }
-          make generate-sitemap
+    # - name: Render demo docs site
+    #   run: |
+    #       cd site
+    #       quarto render --profile development 2>&1 | tee render_errors.log || {
+    #       echo "Quarto render failed immediately";
+    #       cat render_errors.log;
+    #       exit 1;
+    #       }
+    #       make generate-sitemap
 
-    - name: Test for warnings or errors
-      run: |
-        if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
-          echo "Warnings or errors detected during Quarto render"
-          cat site/render_errors.log
-          exit 1
-        else
-          echo "No warnings or errors detected during Quarto render"
-        fi
+    # - name: Test for warnings or errors
+    #   run: |
+    #     if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
+    #       echo "Warnings or errors detected during Quarto render"
+    #       cat site/render_errors.log
+    #       exit 1
+    #     else
+    #       echo "No warnings or errors detected during Quarto render"
+    #     fi
 
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
