--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -38,23 +38,41 @@ runs:
         git clone https://github.com/validmind/validmind-library.git
         cp validmind-library/poetry.lock poetry.lock
 
+    - name: Extract Poetry spec from pyproject.toml
+      id: poetry_spec
+      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install toml
+        SPEC=$(python -c "import toml
+        d=toml.load('validmind-library/pyproject.toml')
+        spec='poetry'
+        for r in d.get('build-system',{}).get('requires',[]):
+            if isinstance(r,str) and r.strip().startswith('poetry'):
+                spec=r.strip(); break
+        spec=d.get('tool',{}).get('poetry',{}).get('dependencies',{}).get('poetry', spec)
+        print(spec)")
+                echo "spec=$SPEC" >> "$GITHUB_OUTPUT"
+
     - name: Cache validmind-library poetry install
       uses: actions/cache@v4
       with:
         path: |
           ~/.cache/pypoetry
           ~/.cache/pip
-        key: validmind-library-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+        key: validmind-library-${{ runner.os }}-poetry-${{ steps.poetry_spec.outputs.spec }}-${{ hashFiles('poetry.lock') }}
         restore-keys: |
+          validmind-library-${{ runner.os }}-poetry-${{ steps.poetry_spec.outputs.spec }}-
           validmind-library-${{ runner.os }}-
 
     - name: Install dependencies from validmind-library
       shell: bash
       run: |
-        pip install poetry==1.7.1
-        cd validmind-library
-        poetry export --without-hashes --format=requirements.txt > ../requirements.txt
-        cd ..
+        python -m pip install "${{ steps.poetry_spec.outputs.spec }}"
+        python -m pip install "poetry-plugin-export>=1.9"
+        poetry --version
+        poetry check -C validmind-library -v
+        poetry export -C validmind-library --without-hashes -f requirements.txt -o requirements.txt
         pip install -r requirements.txt
 
     - name: Register validmind kernel
