--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -72,7 +72,8 @@ runs:
         python -m pip install "poetry-plugin-export>=1.9"
         poetry --version
         poetry check -C validmind-library -v
-        poetry export -C validmind-library --without-hashes -f requirements.txt -o requirements.txt
+        poetry export -C validmind-library --without-hashes -f requirements.txt -o ./requirements.txt
+        ls -l requirements.txt  # debug to confirm file exists
         pip install -r requirements.txt
 
     - name: Register validmind kernel
