--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -71,10 +71,13 @@ runs:
         python -m pip install "${{ steps.poetry_spec.outputs.spec }}"
         python -m pip install "poetry-plugin-export>=1.9"
         poetry --version
+        poetry self show plugins
         poetry check -C validmind-library -v
-        poetry export -C validmind-library --without-hashes -f requirements.txt -o ./requirements.txt
-        ls -l requirements.txt  # debug to confirm file exists
-        pip install -r requirements.txt
+        # Use explicit --output for compatibility
+        poetry export -C validmind-library --without-hashes -f requirements.txt --output ./requirements.txt
+        ls -l ./requirements.txt
+        head -n 20 ./requirements.txt  # sanity check contents
+        pip install -r ./requirements.txt
 
     - name: Register validmind kernel
       shell: bash
