--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -38,53 +38,37 @@ runs:
         git clone https://github.com/validmind/validmind-library.git
         cp validmind-library/poetry.lock poetry.lock
 
-    - name: Extract Poetry spec from pyproject.toml
-      id: poetry_spec
-      shell: bash
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install toml
-        SPEC=$(python -c "import toml
-        d=toml.load('validmind-library/pyproject.toml')
-        spec='poetry'
-        for r in d.get('build-system',{}).get('requires',[]):
-            if isinstance(r,str) and r.strip().startswith('poetry'):
-                spec=r.strip(); break
-        spec=d.get('tool',{}).get('poetry',{}).get('dependencies',{}).get('poetry', spec)
-        print(spec)")
-                echo "spec=$SPEC" >> "$GITHUB_OUTPUT"
-
     - name: Cache validmind-library poetry install
       uses: actions/cache@v4
       with:
         path: |
           ~/.cache/pypoetry
           ~/.cache/pip
-        key: validmind-library-${{ runner.os }}-poetry-${{ steps.poetry_spec.outputs.spec }}-${{ hashFiles('poetry.lock') }}
+        key: validmind-library-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
         restore-keys: |
-          validmind-library-${{ runner.os }}-poetry-${{ steps.poetry_spec.outputs.spec }}-
           validmind-library-${{ runner.os }}-
 
-    - name: Install dependencies from validmind-library (composite-safe)
+    - name: Install dependencies from validmind-library
       shell: bash
       run: |
-        set -Eeuo pipefail
-        # Install Poetry (whatever spec you chose earlier)
-        python -m pip install "${{ steps.poetry_spec.outputs.spec }}"
-        # If you're on Poetry 1.7+, make sure the export plugin is present
-        python -m pip install "poetry-plugin-export>=1.9" || true
-        poetry --version
-        poetry self show plugins || true
+        # Detect Poetry version from the cloned repo's lockfile and install that version
+        POETRY_VERSION=$(grep -m1 -oE 'Poetry [0-9]+(\.[0-9]+){1,2}' validmind-library/poetry.lock | awk '{print $2}')
+        if [ -n "$POETRY_VERSION" ]; then
+          echo "Installing Poetry version $POETRY_VERSION from validmind-library/poetry.lock"
+          pip install "poetry==${POETRY_VERSION}" || {
+            echo "Failed to install Poetry $POETRY_VERSION via pip; installing latest Poetry instead";
+            pip install poetry;
+          }
+        else
+          echo "Warning: Could not detect Poetry version from validmind-library/poetry.lock; installing latest Poetry"
+          pip install poetry
+        fi
 
-        # Export requirements to the *caller* workspace explicitly
-        poetry export -C "$GITHUB_WORKSPACE/validmind-library" \
-          --without-hashes -f requirements.txt \
-          > "$GITHUB_WORKSPACE/requirements.txt"
+        cd validmind-library
+        poetry export --without-hashes --format=requirements.txt > ../requirements.txt
+        cd ..
 
-        # Sanity checks and install
-        ls -l "$GITHUB_WORKSPACE/requirements.txt"
-        head -n 10 "$GITHUB_WORKSPACE/requirements.txt"
-        pip install -r "$GITHUB_WORKSPACE/requirements.txt"
+        pip install -r requirements.txt
 
     - name: Register validmind kernel
       shell: bash
