--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -42,17 +42,17 @@ jobs:
     #     path: site/_source/release-notes
     #     token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-        check-latest: false
+    # - name: Set up Python 3.11
+    #   uses: actions/setup-python@v5
+    #   with:
+    #     python-version: '3.11'
+    #     check-latest: false
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
 
-    - name: Setup R environment
-      uses: ./.github/actions/setup-r
+    # - name: Setup R environment
+    #   uses: ./.github/actions/setup-r
 
     # - name: Populate installation
     #   run: cp -r site/_source/installation/site/installation site/installation
