--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -30,29 +30,52 @@ runs:
         git clone https://github.com/validmind/validmind-library.git
         cp validmind-library/poetry.lock poetry.lock
 
-    - name: Cache validmind-library poetry install
-      uses: actions/cache@v4
+    # 2) Set up Python and enable pip cache keyed by the lockfile
+    - uses: actions/setup-python@v5
+      id: py
       with:
-        path: |
-          ~/.cache/pypoetry
-          ~/.cache/pip
-        key: validmind-library-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
-        restore-keys: |
-          validmind-library-${{ runner.os }}-
+        python-version: '3.11' # or your matrix
+        cache: 'pip'
+        cache-dependency-path: |
+          poetry.lock # add more files if they affect deps
 
     - name: Install Poetry (with export plugin)
       uses: snok/install-poetry@v1
       with:
         plugins: poetry-plugin-export
-        virtualenvs-create: false # optional: install into runner Python instead of venv
 
-    - name: Export and install deps
+    - name: Install dependencies from validmind-library
       shell: bash
       run: |
+        python -m pip install --upgrade pip
         cd validmind-library
-        poetry export -f requirements.txt --without-hashes -o ../requirements.txt
+        poetry export --without-hashes --format=requirements.txt > ../requirements.txt
         cd ..
         pip install -r requirements.txt
+
+    # - name: Cache validmind-library poetry install
+    #   uses: actions/cache@v4
+    #   with:
+    #     path: |
+    #       ~/.cache/pypoetry
+    #       ~/.cache/pip
+    #     key: validmind-library-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+    #     restore-keys: |
+    #       validmind-library-${{ runner.os }}-
+
+    # - name: Install Poetry (with export plugin)
+    #   uses: snok/install-poetry@v1
+    #   with:
+    #     plugins: poetry-plugin-export
+    #     virtualenvs-create: false # optional: install into runner Python instead of venv
+
+    # - name: Export and install deps
+    #   shell: bash
+    #   run: |
+    #     cd validmind-library
+    #     poetry export -f requirements.txt --without-hashes -o ../requirements.txt
+    #     cd ..
+    #     pip install -r requirements.txt
 
     # - name: Install dependencies from validmind-library
     #   shell: bash
