--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -24,10 +24,10 @@ runs:
         pip install validmind
         pip install validmind[llm]
 
-    - name: Clone validmind-library
+    - name: Clone validmind-library @ prod
       shell: bash
       run: |
-        git clone https://github.com/validmind/validmind-library.git
+        git clone --depth 1 --single-branch --branch prod https://github.com/validmind/validmind-library.git
         cp validmind-library/poetry.lock poetry.lock
 
     # 2) Set up Python and enable pip cache keyed by the lockfile
