--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -49,7 +49,9 @@ runs:
       run: |
         python -m pip install --upgrade pip
         cd validmind-library
-        poetry export --without-hashes --format=requirements.txt > ../requirements.txt
+        poetry export -f requirements.txt --without-hashes \
+        | awk -F';' '!/numpy==2\.2\.6 *; *python_version *>= *"3\.11"/' \
+        > requirements.txt
         cd ..
         pip install -r requirements.txt
 
