--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -70,15 +70,15 @@ jobs:
           }
           make generate-sitemap
 
-    - name: Test for warnings or errors
-      run: |
-        if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
-          echo "Warnings or errors detected during Quarto render"
-          cat site/render_errors.log
-          exit 1
-        else
-          echo "No warnings or errors detected during Quarto render"
-        fi
+    # - name: Test for warnings or errors
+    #   run: |
+    #     if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
+    #       echo "Warnings or errors detected during Quarto render"
+    #       cat site/render_errors.log
+    #       exit 1
+    #     else
+    #       echo "No warnings or errors detected during Quarto render"
+    #     fi
 
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
