--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -28,25 +28,25 @@ jobs:
         apt_cleanup: "true"
         create_reserve_gb: "3"
 
-    # - name: Check out installation repository
-    #   uses: actions/checkout@v4
-    #   with:
-    #     repository: validmind/installation
-    #     path: site/_source/installation
-    #     token: ${{ secrets.INSTALLATION_RO_PAT }}
+    - name: Check out installation repository
+      uses: actions/checkout@v4
+      with:
+        repository: validmind/installation
+        path: site/_source/installation
+        token: ${{ secrets.INSTALLATION_RO_PAT }}
 
-    # - name: Check out release-notes repository
-    #   uses: actions/checkout@v4
-    #   with:
-    #     repository: validmind/release-notes
-    #     path: site/_source/release-notes
-    #     token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
+    - name: Check out release-notes repository
+      uses: actions/checkout@v4
+      with:
+        repository: validmind/release-notes
+        path: site/_source/release-notes
+        token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
-    # - name: Set up Python 3.11
-    #   uses: actions/setup-python@v5
-    #   with:
-    #     python-version: '3.11'
-    #     check-latest: false
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+        check-latest: false
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
@@ -54,11 +54,11 @@ jobs:
     - name: Setup R environment
       uses: ./.github/actions/setup-r
 
-    # - name: Populate installation
-    #   run: cp -r site/_source/installation/site/installation site/installation
+    - name: Populate installation
+      run: cp -r site/_source/installation/site/installation site/installation
 
-    # - name: Populate release notes
-    #   run: cp -r site/_source/release-notes/releases site
+    - name: Populate release notes
+      run: cp -r site/_source/release-notes/releases site
 
     - name: Render demo docs site
       run: |
@@ -70,15 +70,15 @@ jobs:
           }
           make generate-sitemap
 
-    # - name: Test for warnings or errors
-    #   run: |
-    #     if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
-    #       echo "Warnings or errors detected during Quarto render"
-    #       cat site/render_errors.log
-    #       exit 1
-    #     else
-    #       echo "No warnings or errors detected during Quarto render"
-    #     fi
+    - name: Test for warnings or errors
+      run: |
+        if grep -q 'WARN\|WARNING\|ERROR:' site/render_errors.log; then
+          echo "Warnings or errors detected during Quarto render"
+          cat site/render_errors.log
+          exit 1
+        else
+          echo "No warnings or errors detected during Quarto render"
+        fi
 
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
