Testing instructions for rebrandable docs site with K8s manifest configuration  (#788)
* Remove generated validmind-docs.yaml file

* Add better custom manifest file

* Re-add generated validmind-docs.yaml file to .gitignore

* Update readme with better testing instructions and example

* Use multiline block scalar

* Add Kind install to Quickstart

* Update tip on container startup time

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ site/releases/documentation
 site/releases/frontend
 site/releases/installation
 site/releases/validmind-library
+
+# Generated ConfigMap for Docker profile
+site/validmind-docs.yaml
